import { describe, it, expect } from 'vitest';

import { parse } from '../src';

const titles = [
  '【极影字幕社】★10月新番 在地下城寻求邂逅是否搞错了什么 第五季 丰饶的女神篇 第09话 GB 720P MP4（字幕社招人内详）',
  '【极影字幕社】★10月新番 在地下城寻求邂逅是否搞错了什么 第五季 丰饶的女神篇 第09话 GB 1080P MP4（字幕社招人内详）',
  '【極影字幕社】★10月新番 在地下城尋求邂逅是否搞錯了什麼 第五季 豐饒的女神篇 第09話 BIG5 1080P MP4（字幕社招人內詳）',
  '【極影字幕社】★10月新番 在地下城尋求邂逅是否搞錯了什麼 第五季 豐饒的女神篇 第09話 BIG5 720P MP4（字幕社招人內詳）',
  '【极影字幕社】 ★10月新番【死神 千年血戰 相克譚】【Bleach Sennen Kessen-hen Soukoku-tan】【37】BIG5 MP4_720P',
  '【极影字幕社】 ★10月新番【死神 千年血战 相克谭】【Bleach Sennen Kessen-hen Soukoku-tan】【37】GB MP4_720P',
  '【极影字幕社】 ★10月新番【死神 千年血戰 相克譚】【Bleach Sennen Kessen-hen Soukoku-tan】【37】BIG5 MP4_1080P',
  '【极影字幕社】 ★10月新番【死神 千年血战 相克谭】【Bleach Sennen Kessen-hen Soukoku-tan】【37】GB MP4_1080P',
  '【极影字幕·毁片党】你们还真就结婚啦？第11集 GB_CN HEVC_opus 1080p',
  '【極影字幕社】★10月新番 在地下城尋求邂逅是否搞錯了什麼 第五季 豐饒的女神篇 第08話 BIG5 1080P MP4（字幕社招人內詳）',
  '【极影字幕社】★10月新番 在地下城寻求邂逅是否搞错了什么 第五季 丰饶的女神篇 第08话 GB 1080P MP4（字幕社招人内详）',
  '【极影字幕社】★10月新番 在地下城寻求邂逅是否搞错了什么 第五季 丰饶的女神篇 第08话 GB 720P MP4（字幕社招人内详）',
  '【極影字幕社】★10月新番 在地下城尋求邂逅是否搞錯了什麼 第五季 豐饒的女神篇 第08話 BIG5 720P MP4（字幕社招人內詳）',
  '【极影字幕社】 ★10月新番【死神 千年血战 相克谭】【Bleach Sennen Kessen-hen Soukoku-tan】【36】GB MP4_1080P',
  '【极影字幕社】 ★10月新番【死神 千年血战 相克谭】【Bleach Sennen Kessen-hen Soukoku-tan】【36】GB MP4_720P',
  '【极影字幕社】 ★10月新番【死神 千年血戰 相克譚】【Bleach Sennen Kessen-hen Soukoku-tan】【36】BIG5 MP4_1080P',
  '【极影字幕社】 ★10月新番【死神 千年血戰 相克譚】【Bleach Sennen Kessen-hen Soukoku-tan】【36】BIG5 MP4_720P',
  '【極影字幕社】★ 你們還真就結婚啦？ 第10集 BIG5 AVC 720p MP4',
  '【极影字幕·毁片党】你们还真就结婚啦？第10集 GB_CN HEVC_opus 1080p',
  '【極影字幕社】★ 你們還真就結婚啦？ 第09集 BIG5 AVC 720p MP4',
  '【极影字幕社】 ★10月新番【死神 千年血戰 相克譚】【Bleach Sennen Kessen-hen Soukoku-tan】【35】BIG5 MP4_720P',
  '【极影字幕社】 ★10月新番【死神 千年血戰 相克譚】【Bleach Sennen Kessen-hen Soukoku-tan】【35】BIG5 MP4_1080P',
  '【极影字幕社】 ★10月新番【死神 千年血战 相克谭】【Bleach Sennen Kessen-hen Soukoku-tan】【35】GB MP4_720P',
  '【极影字幕社】 ★10月新番【死神 千年血战 相克谭】【Bleach Sennen Kessen-hen Soukoku-tan】【35】GB MP4_1080P',
  '【极影字幕·毁片党】你们还真就结婚啦？第09集 GB_CN HEVC_opus 1080p',
  '【極影字幕社】★ 你們還真就結婚啦？ 第08集 BIG5 AVC 720p MP4',
  '【极影字幕社】 ★10月新番【死神 千年血戰 相克譚】【Bleach Sennen Kessen-hen Soukoku-tan】【34】BIG5 MP4_1080P',
  '【极影字幕社】 ★10月新番【死神 千年血戰 相克譚】【Bleach Sennen Kessen-hen Soukoku-tan】【34】BIG5 MP4_720P',
  '【极影字幕社】 ★10月新番【死神 千年血战 相克谭】【Bleach Sennen Kessen-hen Soukoku-tan】【34】GB MP4_720P',
  '【极影字幕社】 ★10月新番【死神 千年血战 相克谭】【Bleach Sennen Kessen-hen Soukoku-tan】【34】GB MP4_1080P',
  '【极影字幕·毁片党】你们还真就结婚啦？第08集 GB_CN HEVC_opus 1080p',
  '【极影字幕·毁片党】你们还真就结婚啦？第08集 GB_CN HEVC_opus 1080p ▶换ED整活版…',
  '【极影字幕社】★10月新番 龙珠大魔/Dragon Ball Daima 第05话 GB 1080P MP4（字幕社招人内详）',
  '【极影字幕社】★10月新番 龙珠大魔/Dragon Ball Daima 第05话 GB 720P MP4（字幕社招人内详）',
  '【极影字幕社】★10月新番 在地下城寻求邂逅是否搞错了什么 第五季 丰饶的女神篇 第07话 GB 720P MP4（字幕社招人内详）',
  '【极影字幕社】★10月新番 在地下城寻求邂逅是否搞错了什么 第五季 丰饶的女神篇 第07话 GB 1080P MP4（字幕社招人内详）',
  '【極影字幕社】★10月新番 在地下城尋求邂逅是否搞錯了什麼 第五季 豐饒的女神篇 第07話 BIG5 1080P MP4（字幕社招人內詳）',
  '【極影字幕社】★10月新番 在地下城尋求邂逅是否搞錯了什麼 第五季 豐饒的女神篇 第07話 BIG5 720P MP4（字幕社招人內詳）',
  '【极影字幕社】★10月新番 龙珠大魔/Dragon Ball Daima 第04话 GB 1080P MP4（字幕社招人内详）',
  '【极影字幕社】★10月新番 龙珠大魔/Dragon Ball Daima 第04话 GB 720P MP4（字幕社招人内详）',
  '【极影字幕社】★10月新番 在地下城寻求邂逅是否搞错了什么 第五季 丰饶的女神篇 第06话 GB 1080P MP4（字幕社招人内详）',
  '【極影字幕社】★10月新番 在地下城尋求邂逅是否搞錯了什麼 第五季 豐饒的女神篇 第06話 BIG5 720P MP4（字幕社招人內詳）',
  '【極影字幕社】★10月新番 在地下城尋求邂逅是否搞錯了什麼 第五季 豐饒的女神篇 第06話 BIG5 1080P MP4（字幕社招人內詳）',
  '【极影字幕社】★10月新番 在地下城寻求邂逅是否搞错了什么 第五季 丰饶的女神篇 第06话 GB 720P MP4（字幕社招人内详）',
  '【极影字幕社】★10月新番 龙珠大魔/Dragon Ball Daima 第03话 GB 1080P MP4（字幕社招人内详）',
  '【极影字幕社】★10月新番 龙珠大魔/Dragon Ball Daima 第03话 GB 720P MP4（字幕社招人内详）',
  '【極影字幕社】★10月新番 在地下城尋求邂逅是否搞錯了什麼 第五季 豐饒的女神篇 第05話 BIG5 1080P MP4（字幕社招人內詳）',
  '【極影字幕社】★10月新番 在地下城尋求邂逅是否搞錯了什麼 第五季 豐饒的女神篇 第04話 BIG5 1080P MP4（字幕社招人內詳）',
  '【极影字幕社】★10月新番 在地下城寻求邂逅是否搞错了什么 第五季 丰饶的女神篇 第05话 GB 720P MP4（字幕社招人内详）',
  '【极影字幕社】★10月新番 在地下城寻求邂逅是否搞错了什么 第五季 丰饶的女神篇 第04话 GB 720P MP4（字幕社招人内详）',
  '【极影字幕社】★10月新番 在地下城寻求邂逅是否搞错了什么 第五季 丰饶的女神篇 第04话 GB 1080P MP4（字幕社招人内详）',
  '【極影字幕社】★10月新番 在地下城尋求邂逅是否搞錯了什麼 第五季 豐饒的女神篇 第05話 BIG5 720P MP4（字幕社招人內詳）',
  '【極影字幕社】★10月新番 在地下城尋求邂逅是否搞錯了什麼 第五季 豐饒的女神篇 第04話 BIG5 720P MP4（字幕社招人內詳）',
  '【极影字幕社】★10月新番 在地下城寻求邂逅是否搞错了什么 第五季 丰饶的女神篇 第05话 GB 1080P MP4（字幕社招人内详）',
  '【极影字幕社】 ★10月新番【死神 千年血戰 相克譚】【Bleach Sennen Kessen-hen Soukoku-tan】【33】BIG5 MP4_720P',
  '【极影字幕社】 ★10月新番【死神 千年血战 相克谭】【Bleach Sennen Kessen-hen Soukoku-tan】【33】GB MP4_720P',
  '【极影字幕社】 ★10月新番【死神 千年血战 相克谭】【Bleach Sennen Kessen-hen Soukoku-tan】【33】GB MP4_1080P',
  '【极影字幕社】 ★10月新番【死神 千年血戰 相克譚】【Bleach Sennen Kessen-hen Soukoku-tan】【33】BIG5 MP4_1080P',
  '【極影字幕社】★10月新番 在地下城尋求邂逅是否搞錯了什麼 第五季 豐饒的女神篇 第03話 BIG5 720P MP4（字幕社招人內詳）',
  '【極影字幕社】★10月新番 在地下城尋求邂逅是否搞錯了什麼 第五季 豐饒的女神篇 第02話 BIG5 1080P MP4（字幕社招人內詳）',
  '【极影字幕社】★10月新番 在地下城寻求邂逅是否搞错了什么 第五季 丰饶的女神篇 第03话 GB 720P MP4（字幕社招人内详）',
  '【极影字幕社】★10月新番 在地下城寻求邂逅是否搞错了什么 第五季 丰饶的女神篇 第03话 GB 1080P MP4（字幕社招人内详）',
  '【極影字幕社】★10月新番 在地下城尋求邂逅是否搞錯了什麼 第五季 豐饒的女神篇 第03話 BIG5 1080P MP4（字幕社招人內詳）',
  '【極影字幕社】★10月新番 在地下城尋求邂逅是否搞錯了什麼 第五季 豐饒的女神篇 第02話 BIG5 720P MP4（字幕社招人內詳）',
  '【极影字幕社】★10月新番 在地下城寻求邂逅是否搞错了什么 第五季 丰饶的女神篇 第02话 GB 720P MP4（字幕社招人内详）',
  '【极影字幕社】★10月新番 在地下城寻求邂逅是否搞错了什么 第五季 丰饶的女神篇 第02话 GB 1080P MP4（字幕社招人内详）',
  '【極影字幕社】★ 你們還真就結婚啦？ 第06集 BIG5 AVC 720p MP4',
  '【極影字幕社】★ 你們還真就結婚啦？ 第07集 BIG5 AVC 720p MP4',
  '【极影字幕·毁片党】你们还真就结婚啦？第07集 GB_CN HEVC_opus 1080p'
];

describe('ANi', () => {
  for (const title of titles) {
    it(title, () => {
      expect(parse(title)).toMatchSnapshot();
    });
  }
});
