// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ANi > 【极影字幕·毁片党】你们还真就结婚啦？第07集 GB_CN HEVC_opus 1080p 1`] = `
{
  "episode": {
    "number": 7,
  },
  "fansub": {
    "collab": [
      "毁片党",
    ],
    "name": "极影字幕",
  },
  "file": {
    "video": {
      "resolution": "1080p",
      "term": "HEVC_opus",
    },
  },
  "language": "CN",
  "subtitles": "GB",
  "tags": [],
  "title": "你们还真就结婚啦？",
}
`;

exports[`ANi > 【极影字幕·毁片党】你们还真就结婚啦？第08集 GB_CN HEVC_opus 1080p 1`] = `
{
  "episode": {
    "number": 8,
  },
  "fansub": {
    "collab": [
      "毁片党",
    ],
    "name": "极影字幕",
  },
  "file": {
    "video": {
      "resolution": "1080p",
      "term": "HEVC_opus",
    },
  },
  "language": "CN",
  "subtitles": "GB",
  "tags": [],
  "title": "你们还真就结婚啦？",
}
`;

exports[`ANi > 【极影字幕·毁片党】你们还真就结婚啦？第08集 GB_CN HEVC_opus 1080p ▶换ED整活版… 1`] = `
{
  "episode": {
    "number": 8,
  },
  "fansub": {
    "collab": [
      "毁片党",
    ],
    "name": "极影字幕",
  },
  "file": {
    "video": {
      "resolution": "1080p",
      "term": "HEVC_opus",
    },
  },
  "language": "CN",
  "subtitles": "GB",
  "tags": [
    "▶换ED整活版…",
  ],
  "title": "你们还真就结婚啦？",
}
`;

exports[`ANi > 【极影字幕·毁片党】你们还真就结婚啦？第09集 GB_CN HEVC_opus 1080p 1`] = `
{
  "episode": {
    "number": 9,
  },
  "fansub": {
    "collab": [
      "毁片党",
    ],
    "name": "极影字幕",
  },
  "file": {
    "video": {
      "resolution": "1080p",
      "term": "HEVC_opus",
    },
  },
  "language": "CN",
  "subtitles": "GB",
  "tags": [],
  "title": "你们还真就结婚啦？",
}
`;

exports[`ANi > 【极影字幕·毁片党】你们还真就结婚啦？第10集 GB_CN HEVC_opus 1080p 1`] = `
{
  "episode": {
    "number": 10,
  },
  "fansub": {
    "collab": [
      "毁片党",
    ],
    "name": "极影字幕",
  },
  "file": {
    "video": {
      "resolution": "1080p",
      "term": "HEVC_opus",
    },
  },
  "language": "CN",
  "subtitles": "GB",
  "tags": [],
  "title": "你们还真就结婚啦？",
}
`;

exports[`ANi > 【极影字幕·毁片党】你们还真就结婚啦？第11集 GB_CN HEVC_opus 1080p 1`] = `
{
  "episode": {
    "number": 11,
  },
  "fansub": {
    "collab": [
      "毁片党",
    ],
    "name": "极影字幕",
  },
  "file": {
    "video": {
      "resolution": "1080p",
      "term": "HEVC_opus",
    },
  },
  "language": "CN",
  "subtitles": "GB",
  "tags": [],
  "title": "你们还真就结婚啦？",
}
`;

exports[`ANi > 【极影字幕社】 ★10月新番【死神 千年血战 相克谭】【Bleach Sennen Kessen-hen Soukoku-tan】【33】GB MP4_720P 1`] = `
{
  "episode": {
    "number": 33,
  },
  "fansub": {
    "name": "极影字幕社",
  },
  "month": 10,
  "tags": [
    "GB MP4_720P",
  ],
  "title": "死神 千年血战 相克谭",
  "titles": [
    "Bleach Sennen Kessen-hen Soukoku-tan",
  ],
}
`;

exports[`ANi > 【极影字幕社】 ★10月新番【死神 千年血战 相克谭】【Bleach Sennen Kessen-hen Soukoku-tan】【33】GB MP4_1080P 1`] = `
{
  "episode": {
    "number": 33,
  },
  "fansub": {
    "name": "极影字幕社",
  },
  "month": 10,
  "tags": [
    "GB MP4_1080P",
  ],
  "title": "死神 千年血战 相克谭",
  "titles": [
    "Bleach Sennen Kessen-hen Soukoku-tan",
  ],
}
`;

exports[`ANi > 【极影字幕社】 ★10月新番【死神 千年血战 相克谭】【Bleach Sennen Kessen-hen Soukoku-tan】【34】GB MP4_720P 1`] = `
{
  "episode": {
    "number": 34,
  },
  "fansub": {
    "name": "极影字幕社",
  },
  "month": 10,
  "tags": [
    "GB MP4_720P",
  ],
  "title": "死神 千年血战 相克谭",
  "titles": [
    "Bleach Sennen Kessen-hen Soukoku-tan",
  ],
}
`;

exports[`ANi > 【极影字幕社】 ★10月新番【死神 千年血战 相克谭】【Bleach Sennen Kessen-hen Soukoku-tan】【34】GB MP4_1080P 1`] = `
{
  "episode": {
    "number": 34,
  },
  "fansub": {
    "name": "极影字幕社",
  },
  "month": 10,
  "tags": [
    "GB MP4_1080P",
  ],
  "title": "死神 千年血战 相克谭",
  "titles": [
    "Bleach Sennen Kessen-hen Soukoku-tan",
  ],
}
`;

exports[`ANi > 【极影字幕社】 ★10月新番【死神 千年血战 相克谭】【Bleach Sennen Kessen-hen Soukoku-tan】【35】GB MP4_720P 1`] = `
{
  "episode": {
    "number": 35,
  },
  "fansub": {
    "name": "极影字幕社",
  },
  "month": 10,
  "tags": [
    "GB MP4_720P",
  ],
  "title": "死神 千年血战 相克谭",
  "titles": [
    "Bleach Sennen Kessen-hen Soukoku-tan",
  ],
}
`;

exports[`ANi > 【极影字幕社】 ★10月新番【死神 千年血战 相克谭】【Bleach Sennen Kessen-hen Soukoku-tan】【35】GB MP4_1080P 1`] = `
{
  "episode": {
    "number": 35,
  },
  "fansub": {
    "name": "极影字幕社",
  },
  "month": 10,
  "tags": [
    "GB MP4_1080P",
  ],
  "title": "死神 千年血战 相克谭",
  "titles": [
    "Bleach Sennen Kessen-hen Soukoku-tan",
  ],
}
`;

exports[`ANi > 【极影字幕社】 ★10月新番【死神 千年血战 相克谭】【Bleach Sennen Kessen-hen Soukoku-tan】【36】GB MP4_720P 1`] = `
{
  "episode": {
    "number": 36,
  },
  "fansub": {
    "name": "极影字幕社",
  },
  "month": 10,
  "tags": [
    "GB MP4_720P",
  ],
  "title": "死神 千年血战 相克谭",
  "titles": [
    "Bleach Sennen Kessen-hen Soukoku-tan",
  ],
}
`;

exports[`ANi > 【极影字幕社】 ★10月新番【死神 千年血战 相克谭】【Bleach Sennen Kessen-hen Soukoku-tan】【36】GB MP4_1080P 1`] = `
{
  "episode": {
    "number": 36,
  },
  "fansub": {
    "name": "极影字幕社",
  },
  "month": 10,
  "tags": [
    "GB MP4_1080P",
  ],
  "title": "死神 千年血战 相克谭",
  "titles": [
    "Bleach Sennen Kessen-hen Soukoku-tan",
  ],
}
`;

exports[`ANi > 【极影字幕社】 ★10月新番【死神 千年血战 相克谭】【Bleach Sennen Kessen-hen Soukoku-tan】【37】GB MP4_720P 1`] = `
{
  "episode": {
    "number": 37,
  },
  "fansub": {
    "name": "极影字幕社",
  },
  "month": 10,
  "tags": [
    "GB MP4_720P",
  ],
  "title": "死神 千年血战 相克谭",
  "titles": [
    "Bleach Sennen Kessen-hen Soukoku-tan",
  ],
}
`;

exports[`ANi > 【极影字幕社】 ★10月新番【死神 千年血战 相克谭】【Bleach Sennen Kessen-hen Soukoku-tan】【37】GB MP4_1080P 1`] = `
{
  "episode": {
    "number": 37,
  },
  "fansub": {
    "name": "极影字幕社",
  },
  "month": 10,
  "tags": [
    "GB MP4_1080P",
  ],
  "title": "死神 千年血战 相克谭",
  "titles": [
    "Bleach Sennen Kessen-hen Soukoku-tan",
  ],
}
`;

exports[`ANi > 【极影字幕社】 ★10月新番【死神 千年血戰 相克譚】【Bleach Sennen Kessen-hen Soukoku-tan】【33】BIG5 MP4_720P 1`] = `
{
  "episode": {
    "number": 33,
  },
  "fansub": {
    "name": "极影字幕社",
  },
  "month": 10,
  "tags": [
    "BIG5 MP4_720P",
  ],
  "title": "死神 千年血戰 相克譚",
  "titles": [
    "Bleach Sennen Kessen-hen Soukoku-tan",
  ],
}
`;

exports[`ANi > 【极影字幕社】 ★10月新番【死神 千年血戰 相克譚】【Bleach Sennen Kessen-hen Soukoku-tan】【33】BIG5 MP4_1080P 1`] = `
{
  "episode": {
    "number": 33,
  },
  "fansub": {
    "name": "极影字幕社",
  },
  "month": 10,
  "tags": [
    "BIG5 MP4_1080P",
  ],
  "title": "死神 千年血戰 相克譚",
  "titles": [
    "Bleach Sennen Kessen-hen Soukoku-tan",
  ],
}
`;

exports[`ANi > 【极影字幕社】 ★10月新番【死神 千年血戰 相克譚】【Bleach Sennen Kessen-hen Soukoku-tan】【34】BIG5 MP4_720P 1`] = `
{
  "episode": {
    "number": 34,
  },
  "fansub": {
    "name": "极影字幕社",
  },
  "month": 10,
  "tags": [
    "BIG5 MP4_720P",
  ],
  "title": "死神 千年血戰 相克譚",
  "titles": [
    "Bleach Sennen Kessen-hen Soukoku-tan",
  ],
}
`;

exports[`ANi > 【极影字幕社】 ★10月新番【死神 千年血戰 相克譚】【Bleach Sennen Kessen-hen Soukoku-tan】【34】BIG5 MP4_1080P 1`] = `
{
  "episode": {
    "number": 34,
  },
  "fansub": {
    "name": "极影字幕社",
  },
  "month": 10,
  "tags": [
    "BIG5 MP4_1080P",
  ],
  "title": "死神 千年血戰 相克譚",
  "titles": [
    "Bleach Sennen Kessen-hen Soukoku-tan",
  ],
}
`;

exports[`ANi > 【极影字幕社】 ★10月新番【死神 千年血戰 相克譚】【Bleach Sennen Kessen-hen Soukoku-tan】【35】BIG5 MP4_720P 1`] = `
{
  "episode": {
    "number": 35,
  },
  "fansub": {
    "name": "极影字幕社",
  },
  "month": 10,
  "tags": [
    "BIG5 MP4_720P",
  ],
  "title": "死神 千年血戰 相克譚",
  "titles": [
    "Bleach Sennen Kessen-hen Soukoku-tan",
  ],
}
`;

exports[`ANi > 【极影字幕社】 ★10月新番【死神 千年血戰 相克譚】【Bleach Sennen Kessen-hen Soukoku-tan】【35】BIG5 MP4_1080P 1`] = `
{
  "episode": {
    "number": 35,
  },
  "fansub": {
    "name": "极影字幕社",
  },
  "month": 10,
  "tags": [
    "BIG5 MP4_1080P",
  ],
  "title": "死神 千年血戰 相克譚",
  "titles": [
    "Bleach Sennen Kessen-hen Soukoku-tan",
  ],
}
`;

exports[`ANi > 【极影字幕社】 ★10月新番【死神 千年血戰 相克譚】【Bleach Sennen Kessen-hen Soukoku-tan】【36】BIG5 MP4_720P 1`] = `
{
  "episode": {
    "number": 36,
  },
  "fansub": {
    "name": "极影字幕社",
  },
  "month": 10,
  "tags": [
    "BIG5 MP4_720P",
  ],
  "title": "死神 千年血戰 相克譚",
  "titles": [
    "Bleach Sennen Kessen-hen Soukoku-tan",
  ],
}
`;

exports[`ANi > 【极影字幕社】 ★10月新番【死神 千年血戰 相克譚】【Bleach Sennen Kessen-hen Soukoku-tan】【36】BIG5 MP4_1080P 1`] = `
{
  "episode": {
    "number": 36,
  },
  "fansub": {
    "name": "极影字幕社",
  },
  "month": 10,
  "tags": [
    "BIG5 MP4_1080P",
  ],
  "title": "死神 千年血戰 相克譚",
  "titles": [
    "Bleach Sennen Kessen-hen Soukoku-tan",
  ],
}
`;

exports[`ANi > 【极影字幕社】 ★10月新番【死神 千年血戰 相克譚】【Bleach Sennen Kessen-hen Soukoku-tan】【37】BIG5 MP4_720P 1`] = `
{
  "episode": {
    "number": 37,
  },
  "fansub": {
    "name": "极影字幕社",
  },
  "month": 10,
  "tags": [
    "BIG5 MP4_720P",
  ],
  "title": "死神 千年血戰 相克譚",
  "titles": [
    "Bleach Sennen Kessen-hen Soukoku-tan",
  ],
}
`;

exports[`ANi > 【极影字幕社】 ★10月新番【死神 千年血戰 相克譚】【Bleach Sennen Kessen-hen Soukoku-tan】【37】BIG5 MP4_1080P 1`] = `
{
  "episode": {
    "number": 37,
  },
  "fansub": {
    "name": "极影字幕社",
  },
  "month": 10,
  "tags": [
    "BIG5 MP4_1080P",
  ],
  "title": "死神 千年血戰 相克譚",
  "titles": [
    "Bleach Sennen Kessen-hen Soukoku-tan",
  ],
}
`;

exports[`ANi > 【极影字幕社】★10月新番 在地下城寻求邂逅是否搞错了什么 第五季 丰饶的女神篇 第02话 GB 720P MP4（字幕社招人内详） 1`] = `
{
  "episode": {
    "number": 2,
  },
  "fansub": {
    "name": "极影字幕社",
  },
  "file": {
    "extension": "MP4",
    "video": {
      "resolution": "720P",
    },
  },
  "month": 10,
  "subtitles": "GB",
  "tags": [],
  "title": " 在地下城寻求邂逅是否搞错了什么 第五季 丰饶的女神篇",
}
`;

exports[`ANi > 【极影字幕社】★10月新番 在地下城寻求邂逅是否搞错了什么 第五季 丰饶的女神篇 第02话 GB 1080P MP4（字幕社招人内详） 1`] = `
{
  "episode": {
    "number": 2,
  },
  "fansub": {
    "name": "极影字幕社",
  },
  "file": {
    "extension": "MP4",
    "video": {
      "resolution": "1080P",
    },
  },
  "month": 10,
  "subtitles": "GB",
  "tags": [],
  "title": " 在地下城寻求邂逅是否搞错了什么 第五季 丰饶的女神篇",
}
`;

exports[`ANi > 【极影字幕社】★10月新番 在地下城寻求邂逅是否搞错了什么 第五季 丰饶的女神篇 第03话 GB 720P MP4（字幕社招人内详） 1`] = `
{
  "episode": {
    "number": 3,
  },
  "fansub": {
    "name": "极影字幕社",
  },
  "file": {
    "extension": "MP4",
    "video": {
      "resolution": "720P",
    },
  },
  "month": 10,
  "subtitles": "GB",
  "tags": [],
  "title": " 在地下城寻求邂逅是否搞错了什么 第五季 丰饶的女神篇",
}
`;

exports[`ANi > 【极影字幕社】★10月新番 在地下城寻求邂逅是否搞错了什么 第五季 丰饶的女神篇 第03话 GB 1080P MP4（字幕社招人内详） 1`] = `
{
  "episode": {
    "number": 3,
  },
  "fansub": {
    "name": "极影字幕社",
  },
  "file": {
    "extension": "MP4",
    "video": {
      "resolution": "1080P",
    },
  },
  "month": 10,
  "subtitles": "GB",
  "tags": [],
  "title": " 在地下城寻求邂逅是否搞错了什么 第五季 丰饶的女神篇",
}
`;

exports[`ANi > 【极影字幕社】★10月新番 在地下城寻求邂逅是否搞错了什么 第五季 丰饶的女神篇 第04话 GB 720P MP4（字幕社招人内详） 1`] = `
{
  "episode": {
    "number": 4,
  },
  "fansub": {
    "name": "极影字幕社",
  },
  "file": {
    "extension": "MP4",
    "video": {
      "resolution": "720P",
    },
  },
  "month": 10,
  "subtitles": "GB",
  "tags": [],
  "title": " 在地下城寻求邂逅是否搞错了什么 第五季 丰饶的女神篇",
}
`;

exports[`ANi > 【极影字幕社】★10月新番 在地下城寻求邂逅是否搞错了什么 第五季 丰饶的女神篇 第04话 GB 1080P MP4（字幕社招人内详） 1`] = `
{
  "episode": {
    "number": 4,
  },
  "fansub": {
    "name": "极影字幕社",
  },
  "file": {
    "extension": "MP4",
    "video": {
      "resolution": "1080P",
    },
  },
  "month": 10,
  "subtitles": "GB",
  "tags": [],
  "title": " 在地下城寻求邂逅是否搞错了什么 第五季 丰饶的女神篇",
}
`;

exports[`ANi > 【极影字幕社】★10月新番 在地下城寻求邂逅是否搞错了什么 第五季 丰饶的女神篇 第05话 GB 720P MP4（字幕社招人内详） 1`] = `
{
  "episode": {
    "number": 5,
  },
  "fansub": {
    "name": "极影字幕社",
  },
  "file": {
    "extension": "MP4",
    "video": {
      "resolution": "720P",
    },
  },
  "month": 10,
  "subtitles": "GB",
  "tags": [],
  "title": " 在地下城寻求邂逅是否搞错了什么 第五季 丰饶的女神篇",
}
`;

exports[`ANi > 【极影字幕社】★10月新番 在地下城寻求邂逅是否搞错了什么 第五季 丰饶的女神篇 第05话 GB 1080P MP4（字幕社招人内详） 1`] = `
{
  "episode": {
    "number": 5,
  },
  "fansub": {
    "name": "极影字幕社",
  },
  "file": {
    "extension": "MP4",
    "video": {
      "resolution": "1080P",
    },
  },
  "month": 10,
  "subtitles": "GB",
  "tags": [],
  "title": " 在地下城寻求邂逅是否搞错了什么 第五季 丰饶的女神篇",
}
`;

exports[`ANi > 【极影字幕社】★10月新番 在地下城寻求邂逅是否搞错了什么 第五季 丰饶的女神篇 第06话 GB 720P MP4（字幕社招人内详） 1`] = `
{
  "episode": {
    "number": 6,
  },
  "fansub": {
    "name": "极影字幕社",
  },
  "file": {
    "extension": "MP4",
    "video": {
      "resolution": "720P",
    },
  },
  "month": 10,
  "subtitles": "GB",
  "tags": [],
  "title": " 在地下城寻求邂逅是否搞错了什么 第五季 丰饶的女神篇",
}
`;

exports[`ANi > 【极影字幕社】★10月新番 在地下城寻求邂逅是否搞错了什么 第五季 丰饶的女神篇 第06话 GB 1080P MP4（字幕社招人内详） 1`] = `
{
  "episode": {
    "number": 6,
  },
  "fansub": {
    "name": "极影字幕社",
  },
  "file": {
    "extension": "MP4",
    "video": {
      "resolution": "1080P",
    },
  },
  "month": 10,
  "subtitles": "GB",
  "tags": [],
  "title": " 在地下城寻求邂逅是否搞错了什么 第五季 丰饶的女神篇",
}
`;

exports[`ANi > 【极影字幕社】★10月新番 在地下城寻求邂逅是否搞错了什么 第五季 丰饶的女神篇 第07话 GB 720P MP4（字幕社招人内详） 1`] = `
{
  "episode": {
    "number": 7,
  },
  "fansub": {
    "name": "极影字幕社",
  },
  "file": {
    "extension": "MP4",
    "video": {
      "resolution": "720P",
    },
  },
  "month": 10,
  "subtitles": "GB",
  "tags": [],
  "title": " 在地下城寻求邂逅是否搞错了什么 第五季 丰饶的女神篇",
}
`;

exports[`ANi > 【极影字幕社】★10月新番 在地下城寻求邂逅是否搞错了什么 第五季 丰饶的女神篇 第07话 GB 1080P MP4（字幕社招人内详） 1`] = `
{
  "episode": {
    "number": 7,
  },
  "fansub": {
    "name": "极影字幕社",
  },
  "file": {
    "extension": "MP4",
    "video": {
      "resolution": "1080P",
    },
  },
  "month": 10,
  "subtitles": "GB",
  "tags": [],
  "title": " 在地下城寻求邂逅是否搞错了什么 第五季 丰饶的女神篇",
}
`;

exports[`ANi > 【极影字幕社】★10月新番 在地下城寻求邂逅是否搞错了什么 第五季 丰饶的女神篇 第08话 GB 720P MP4（字幕社招人内详） 1`] = `
{
  "episode": {
    "number": 8,
  },
  "fansub": {
    "name": "极影字幕社",
  },
  "file": {
    "extension": "MP4",
    "video": {
      "resolution": "720P",
    },
  },
  "month": 10,
  "subtitles": "GB",
  "tags": [],
  "title": " 在地下城寻求邂逅是否搞错了什么 第五季 丰饶的女神篇",
}
`;

exports[`ANi > 【极影字幕社】★10月新番 在地下城寻求邂逅是否搞错了什么 第五季 丰饶的女神篇 第08话 GB 1080P MP4（字幕社招人内详） 1`] = `
{
  "episode": {
    "number": 8,
  },
  "fansub": {
    "name": "极影字幕社",
  },
  "file": {
    "extension": "MP4",
    "video": {
      "resolution": "1080P",
    },
  },
  "month": 10,
  "subtitles": "GB",
  "tags": [],
  "title": " 在地下城寻求邂逅是否搞错了什么 第五季 丰饶的女神篇",
}
`;

exports[`ANi > 【极影字幕社】★10月新番 在地下城寻求邂逅是否搞错了什么 第五季 丰饶的女神篇 第09话 GB 720P MP4（字幕社招人内详） 1`] = `
{
  "episode": {
    "number": 9,
  },
  "fansub": {
    "name": "极影字幕社",
  },
  "file": {
    "extension": "MP4",
    "video": {
      "resolution": "720P",
    },
  },
  "month": 10,
  "subtitles": "GB",
  "tags": [],
  "title": " 在地下城寻求邂逅是否搞错了什么 第五季 丰饶的女神篇",
}
`;

exports[`ANi > 【极影字幕社】★10月新番 在地下城寻求邂逅是否搞错了什么 第五季 丰饶的女神篇 第09话 GB 1080P MP4（字幕社招人内详） 1`] = `
{
  "episode": {
    "number": 9,
  },
  "fansub": {
    "name": "极影字幕社",
  },
  "file": {
    "extension": "MP4",
    "video": {
      "resolution": "1080P",
    },
  },
  "month": 10,
  "subtitles": "GB",
  "tags": [],
  "title": " 在地下城寻求邂逅是否搞错了什么 第五季 丰饶的女神篇",
}
`;

exports[`ANi > 【极影字幕社】★10月新番 龙珠大魔/Dragon Ball Daima 第03话 GB 720P MP4（字幕社招人内详） 1`] = `
{
  "episode": {
    "number": 3,
  },
  "fansub": {
    "name": "极影字幕社",
  },
  "file": {
    "extension": "MP4",
    "video": {
      "resolution": "720P",
    },
  },
  "month": 10,
  "subtitles": "GB",
  "tags": [],
  "title": "龙珠大魔",
  "titles": [
    "Dragon Ball Daima",
  ],
}
`;

exports[`ANi > 【极影字幕社】★10月新番 龙珠大魔/Dragon Ball Daima 第03话 GB 1080P MP4（字幕社招人内详） 1`] = `
{
  "episode": {
    "number": 3,
  },
  "fansub": {
    "name": "极影字幕社",
  },
  "file": {
    "extension": "MP4",
    "video": {
      "resolution": "1080P",
    },
  },
  "month": 10,
  "subtitles": "GB",
  "tags": [],
  "title": "龙珠大魔",
  "titles": [
    "Dragon Ball Daima",
  ],
}
`;

exports[`ANi > 【极影字幕社】★10月新番 龙珠大魔/Dragon Ball Daima 第04话 GB 720P MP4（字幕社招人内详） 1`] = `
{
  "episode": {
    "number": 4,
  },
  "fansub": {
    "name": "极影字幕社",
  },
  "file": {
    "extension": "MP4",
    "video": {
      "resolution": "720P",
    },
  },
  "month": 10,
  "subtitles": "GB",
  "tags": [],
  "title": "龙珠大魔",
  "titles": [
    "Dragon Ball Daima",
  ],
}
`;

exports[`ANi > 【极影字幕社】★10月新番 龙珠大魔/Dragon Ball Daima 第04话 GB 1080P MP4（字幕社招人内详） 1`] = `
{
  "episode": {
    "number": 4,
  },
  "fansub": {
    "name": "极影字幕社",
  },
  "file": {
    "extension": "MP4",
    "video": {
      "resolution": "1080P",
    },
  },
  "month": 10,
  "subtitles": "GB",
  "tags": [],
  "title": "龙珠大魔",
  "titles": [
    "Dragon Ball Daima",
  ],
}
`;

exports[`ANi > 【极影字幕社】★10月新番 龙珠大魔/Dragon Ball Daima 第05话 GB 720P MP4（字幕社招人内详） 1`] = `
{
  "episode": {
    "number": 5,
  },
  "fansub": {
    "name": "极影字幕社",
  },
  "file": {
    "extension": "MP4",
    "video": {
      "resolution": "720P",
    },
  },
  "month": 10,
  "subtitles": "GB",
  "tags": [],
  "title": "龙珠大魔",
  "titles": [
    "Dragon Ball Daima",
  ],
}
`;

exports[`ANi > 【极影字幕社】★10月新番 龙珠大魔/Dragon Ball Daima 第05话 GB 1080P MP4（字幕社招人内详） 1`] = `
{
  "episode": {
    "number": 5,
  },
  "fansub": {
    "name": "极影字幕社",
  },
  "file": {
    "extension": "MP4",
    "video": {
      "resolution": "1080P",
    },
  },
  "month": 10,
  "subtitles": "GB",
  "tags": [],
  "title": "龙珠大魔",
  "titles": [
    "Dragon Ball Daima",
  ],
}
`;

exports[`ANi > 【極影字幕社】★ 你們還真就結婚啦？ 第06集 BIG5 AVC 720p MP4 1`] = `
{
  "episode": {
    "number": 6,
  },
  "fansub": {
    "name": "極影字幕社",
  },
  "file": {
    "extension": "MP4",
    "video": {
      "resolution": "720p",
      "term": "AVC",
    },
  },
  "subtitles": "BIG5",
  "tags": [],
  "title": "★ 你們還真就結婚啦？",
}
`;

exports[`ANi > 【極影字幕社】★ 你們還真就結婚啦？ 第07集 BIG5 AVC 720p MP4 1`] = `
{
  "episode": {
    "number": 7,
  },
  "fansub": {
    "name": "極影字幕社",
  },
  "file": {
    "extension": "MP4",
    "video": {
      "resolution": "720p",
      "term": "AVC",
    },
  },
  "subtitles": "BIG5",
  "tags": [],
  "title": "★ 你們還真就結婚啦？",
}
`;

exports[`ANi > 【極影字幕社】★ 你們還真就結婚啦？ 第08集 BIG5 AVC 720p MP4 1`] = `
{
  "episode": {
    "number": 8,
  },
  "fansub": {
    "name": "極影字幕社",
  },
  "file": {
    "extension": "MP4",
    "video": {
      "resolution": "720p",
      "term": "AVC",
    },
  },
  "subtitles": "BIG5",
  "tags": [],
  "title": "★ 你們還真就結婚啦？",
}
`;

exports[`ANi > 【極影字幕社】★ 你們還真就結婚啦？ 第09集 BIG5 AVC 720p MP4 1`] = `
{
  "episode": {
    "number": 9,
  },
  "fansub": {
    "name": "極影字幕社",
  },
  "file": {
    "extension": "MP4",
    "video": {
      "resolution": "720p",
      "term": "AVC",
    },
  },
  "subtitles": "BIG5",
  "tags": [],
  "title": "★ 你們還真就結婚啦？",
}
`;

exports[`ANi > 【極影字幕社】★ 你們還真就結婚啦？ 第10集 BIG5 AVC 720p MP4 1`] = `
{
  "episode": {
    "number": 10,
  },
  "fansub": {
    "name": "極影字幕社",
  },
  "file": {
    "extension": "MP4",
    "video": {
      "resolution": "720p",
      "term": "AVC",
    },
  },
  "subtitles": "BIG5",
  "tags": [],
  "title": "★ 你們還真就結婚啦？",
}
`;

exports[`ANi > 【極影字幕社】★10月新番 在地下城尋求邂逅是否搞錯了什麼 第五季 豐饒的女神篇 第02話 BIG5 720P MP4（字幕社招人內詳） 1`] = `
{
  "episode": {
    "number": 2,
  },
  "fansub": {
    "name": "極影字幕社",
  },
  "file": {
    "extension": "MP4",
    "video": {
      "resolution": "720P",
    },
  },
  "month": 10,
  "subtitles": "BIG5",
  "tags": [],
  "title": " 在地下城尋求邂逅是否搞錯了什麼 第五季 豐饒的女神篇",
}
`;

exports[`ANi > 【極影字幕社】★10月新番 在地下城尋求邂逅是否搞錯了什麼 第五季 豐饒的女神篇 第02話 BIG5 1080P MP4（字幕社招人內詳） 1`] = `
{
  "episode": {
    "number": 2,
  },
  "fansub": {
    "name": "極影字幕社",
  },
  "file": {
    "extension": "MP4",
    "video": {
      "resolution": "1080P",
    },
  },
  "month": 10,
  "subtitles": "BIG5",
  "tags": [],
  "title": " 在地下城尋求邂逅是否搞錯了什麼 第五季 豐饒的女神篇",
}
`;

exports[`ANi > 【極影字幕社】★10月新番 在地下城尋求邂逅是否搞錯了什麼 第五季 豐饒的女神篇 第03話 BIG5 720P MP4（字幕社招人內詳） 1`] = `
{
  "episode": {
    "number": 3,
  },
  "fansub": {
    "name": "極影字幕社",
  },
  "file": {
    "extension": "MP4",
    "video": {
      "resolution": "720P",
    },
  },
  "month": 10,
  "subtitles": "BIG5",
  "tags": [],
  "title": " 在地下城尋求邂逅是否搞錯了什麼 第五季 豐饒的女神篇",
}
`;

exports[`ANi > 【極影字幕社】★10月新番 在地下城尋求邂逅是否搞錯了什麼 第五季 豐饒的女神篇 第03話 BIG5 1080P MP4（字幕社招人內詳） 1`] = `
{
  "episode": {
    "number": 3,
  },
  "fansub": {
    "name": "極影字幕社",
  },
  "file": {
    "extension": "MP4",
    "video": {
      "resolution": "1080P",
    },
  },
  "month": 10,
  "subtitles": "BIG5",
  "tags": [],
  "title": " 在地下城尋求邂逅是否搞錯了什麼 第五季 豐饒的女神篇",
}
`;

exports[`ANi > 【極影字幕社】★10月新番 在地下城尋求邂逅是否搞錯了什麼 第五季 豐饒的女神篇 第04話 BIG5 720P MP4（字幕社招人內詳） 1`] = `
{
  "episode": {
    "number": 4,
  },
  "fansub": {
    "name": "極影字幕社",
  },
  "file": {
    "extension": "MP4",
    "video": {
      "resolution": "720P",
    },
  },
  "month": 10,
  "subtitles": "BIG5",
  "tags": [],
  "title": " 在地下城尋求邂逅是否搞錯了什麼 第五季 豐饒的女神篇",
}
`;

exports[`ANi > 【極影字幕社】★10月新番 在地下城尋求邂逅是否搞錯了什麼 第五季 豐饒的女神篇 第04話 BIG5 1080P MP4（字幕社招人內詳） 1`] = `
{
  "episode": {
    "number": 4,
  },
  "fansub": {
    "name": "極影字幕社",
  },
  "file": {
    "extension": "MP4",
    "video": {
      "resolution": "1080P",
    },
  },
  "month": 10,
  "subtitles": "BIG5",
  "tags": [],
  "title": " 在地下城尋求邂逅是否搞錯了什麼 第五季 豐饒的女神篇",
}
`;

exports[`ANi > 【極影字幕社】★10月新番 在地下城尋求邂逅是否搞錯了什麼 第五季 豐饒的女神篇 第05話 BIG5 720P MP4（字幕社招人內詳） 1`] = `
{
  "episode": {
    "number": 5,
  },
  "fansub": {
    "name": "極影字幕社",
  },
  "file": {
    "extension": "MP4",
    "video": {
      "resolution": "720P",
    },
  },
  "month": 10,
  "subtitles": "BIG5",
  "tags": [],
  "title": " 在地下城尋求邂逅是否搞錯了什麼 第五季 豐饒的女神篇",
}
`;

exports[`ANi > 【極影字幕社】★10月新番 在地下城尋求邂逅是否搞錯了什麼 第五季 豐饒的女神篇 第05話 BIG5 1080P MP4（字幕社招人內詳） 1`] = `
{
  "episode": {
    "number": 5,
  },
  "fansub": {
    "name": "極影字幕社",
  },
  "file": {
    "extension": "MP4",
    "video": {
      "resolution": "1080P",
    },
  },
  "month": 10,
  "subtitles": "BIG5",
  "tags": [],
  "title": " 在地下城尋求邂逅是否搞錯了什麼 第五季 豐饒的女神篇",
}
`;

exports[`ANi > 【極影字幕社】★10月新番 在地下城尋求邂逅是否搞錯了什麼 第五季 豐饒的女神篇 第06話 BIG5 720P MP4（字幕社招人內詳） 1`] = `
{
  "episode": {
    "number": 6,
  },
  "fansub": {
    "name": "極影字幕社",
  },
  "file": {
    "extension": "MP4",
    "video": {
      "resolution": "720P",
    },
  },
  "month": 10,
  "subtitles": "BIG5",
  "tags": [],
  "title": " 在地下城尋求邂逅是否搞錯了什麼 第五季 豐饒的女神篇",
}
`;

exports[`ANi > 【極影字幕社】★10月新番 在地下城尋求邂逅是否搞錯了什麼 第五季 豐饒的女神篇 第06話 BIG5 1080P MP4（字幕社招人內詳） 1`] = `
{
  "episode": {
    "number": 6,
  },
  "fansub": {
    "name": "極影字幕社",
  },
  "file": {
    "extension": "MP4",
    "video": {
      "resolution": "1080P",
    },
  },
  "month": 10,
  "subtitles": "BIG5",
  "tags": [],
  "title": " 在地下城尋求邂逅是否搞錯了什麼 第五季 豐饒的女神篇",
}
`;

exports[`ANi > 【極影字幕社】★10月新番 在地下城尋求邂逅是否搞錯了什麼 第五季 豐饒的女神篇 第07話 BIG5 720P MP4（字幕社招人內詳） 1`] = `
{
  "episode": {
    "number": 7,
  },
  "fansub": {
    "name": "極影字幕社",
  },
  "file": {
    "extension": "MP4",
    "video": {
      "resolution": "720P",
    },
  },
  "month": 10,
  "subtitles": "BIG5",
  "tags": [],
  "title": " 在地下城尋求邂逅是否搞錯了什麼 第五季 豐饒的女神篇",
}
`;

exports[`ANi > 【極影字幕社】★10月新番 在地下城尋求邂逅是否搞錯了什麼 第五季 豐饒的女神篇 第07話 BIG5 1080P MP4（字幕社招人內詳） 1`] = `
{
  "episode": {
    "number": 7,
  },
  "fansub": {
    "name": "極影字幕社",
  },
  "file": {
    "extension": "MP4",
    "video": {
      "resolution": "1080P",
    },
  },
  "month": 10,
  "subtitles": "BIG5",
  "tags": [],
  "title": " 在地下城尋求邂逅是否搞錯了什麼 第五季 豐饒的女神篇",
}
`;

exports[`ANi > 【極影字幕社】★10月新番 在地下城尋求邂逅是否搞錯了什麼 第五季 豐饒的女神篇 第08話 BIG5 720P MP4（字幕社招人內詳） 1`] = `
{
  "episode": {
    "number": 8,
  },
  "fansub": {
    "name": "極影字幕社",
  },
  "file": {
    "extension": "MP4",
    "video": {
      "resolution": "720P",
    },
  },
  "month": 10,
  "subtitles": "BIG5",
  "tags": [],
  "title": " 在地下城尋求邂逅是否搞錯了什麼 第五季 豐饒的女神篇",
}
`;

exports[`ANi > 【極影字幕社】★10月新番 在地下城尋求邂逅是否搞錯了什麼 第五季 豐饒的女神篇 第08話 BIG5 1080P MP4（字幕社招人內詳） 1`] = `
{
  "episode": {
    "number": 8,
  },
  "fansub": {
    "name": "極影字幕社",
  },
  "file": {
    "extension": "MP4",
    "video": {
      "resolution": "1080P",
    },
  },
  "month": 10,
  "subtitles": "BIG5",
  "tags": [],
  "title": " 在地下城尋求邂逅是否搞錯了什麼 第五季 豐饒的女神篇",
}
`;

exports[`ANi > 【極影字幕社】★10月新番 在地下城尋求邂逅是否搞錯了什麼 第五季 豐饒的女神篇 第09話 BIG5 720P MP4（字幕社招人內詳） 1`] = `
{
  "episode": {
    "number": 9,
  },
  "fansub": {
    "name": "極影字幕社",
  },
  "file": {
    "extension": "MP4",
    "video": {
      "resolution": "720P",
    },
  },
  "month": 10,
  "subtitles": "BIG5",
  "tags": [],
  "title": " 在地下城尋求邂逅是否搞錯了什麼 第五季 豐饒的女神篇",
}
`;

exports[`ANi > 【極影字幕社】★10月新番 在地下城尋求邂逅是否搞錯了什麼 第五季 豐饒的女神篇 第09話 BIG5 1080P MP4（字幕社招人內詳） 1`] = `
{
  "episode": {
    "number": 9,
  },
  "fansub": {
    "name": "極影字幕社",
  },
  "file": {
    "extension": "MP4",
    "video": {
      "resolution": "1080P",
    },
  },
  "month": 10,
  "subtitles": "BIG5",
  "tags": [],
  "title": " 在地下城尋求邂逅是否搞錯了什麼 第五季 豐饒的女神篇",
}
`;
